otel-experiment/manifests/30-kibana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kibana
  name: kibana
  namespace: elk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: "kubernetes.io/arch"
                    operator: "In"
                    values: ["arm64"]
      containers:
        - image: kibana:8.18.2
          name: kibana
          ports:
            - containerPort: 5601
              protocol: TCP
      restartPolicy: Always
