otel-experiment/manifests/48-fluentbit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fluentbit
  name: fluentbit
  namespace: elk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluentbit
  template:
    metadata:
      labels:
        app: fluentbit
    spec:
      serviceAccountName: fluentbit
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: "kubernetes.io/arch"
                    operator: "In"
                    values: ["arm64"]
      containers:
        - image: cr.fluentbit.io/fluent/fluent-bit:4.0.4-debug # Remove the -debug for real use
          name: fluentbit
          volumeMounts:
            - mountPath: /fluent-bit/etc/fluent-bit.yaml
              name: fluentbit-config
              subPath: fluentbit-config
          command: ["-c", "/fluent-bit/etc/fluent-bit.yaml"]
      restartPolicy: Always
      volumes:
        - configMap:
            items:
              - key: fluentbit-config
                path: fluentbit-config
            name: fluentbit-config
          name: fluentbit-config
