otel-experiment/manifests/22-kibana-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
  name: kibana
  namespace: elk
spec:
  type: ClusterIP
  ports:
    - name: "5601"
      port: 5601
      protocol: TCP
      targetPort: 5601
  selector:
    app: kibana
