otel-experiment/manifests/24-logstash-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: logstash
  name: logstash
  namespace: elk
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "9600"
      port: 9600
      targetPort: 9600
  selector:
    app: logstash
