otel-experiment/manifests/34-kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elk
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: "kibana.k8s.eviljonnys.com"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: kibana
              port: 
                number: 5601
